<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="presenter"
            type="com.vkas.unlimitedfast.ufui.main.MainActivity.UfClick" />

        <variable
            name="vpnAdUf"
            type="Boolean"
            android:value="false" />

        <variable
            name="vpnState"
            type="Integer"
            android:value="0" />

        <variable
            name="sidebarShowsUf"
            type="Boolean"
            android:value="false" />
    </data>

    <FrameLayout
        android:id="@+id/uf_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lin_main_uf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            tools:context=".ui.main.MainActivity">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_main_nav"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="20dp"
                    android:onClick="@{() ->presenter.openOrCloseMenu()}"
                    android:src="@mipmap/ic_main_setting"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/lin_service" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lin_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="42dp"
                    android:layout_marginEnd="20dp"
                    android:background="@mipmap/bg_main_service"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:onClick="@{() ->presenter.clickService()}"
                        android:orientation="horizontal"
                        android:paddingStart="12dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/img_country"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="left|center_vertical"
                            android:src="@mipmap/ic_unitedkingdom" />

                        <TextView
                            android:id="@+id/txt_country"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="7dp"
                            android:gravity="center_vertical"
                            android:text="United States "
                            android:textColor="#FAFFFFFF"
                            android:textSize="14sp" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_switch_uf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="53dp"
                    android:gravity="center"
                    android:onClick="@{() ->presenter.linkService()}"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lin_service">

                    <FrameLayout
                        android:id="@+id/fl_connect"
                        android:layout_width="284dp"
                        android:layout_height="268dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/img_state"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@mipmap/ic_diss_connect"
                            android:visibility="@{vpnState!=1 ? View.VISIBLE : View.GONE}" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/lav_view_uf"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="@{vpnState==1 ? View.VISIBLE : View.GONE}"
                            app:lottie_fileName="data.json"
                            app:lottie_imageAssetsFolder="images"
                            app:lottie_loop="true" />
                    </FrameLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cl_switch_uf">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/the_connection_time"
                        android:textColor="#FAFFFFFF"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lin_service" />

                    <TextView
                        android:id="@+id/txt_timer_uf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="11dp"
                        android:gravity="center"
                        android:text="@string/_00_00_00"
                        android:textColor="#FFF6EB1F"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/img_connectionStatus"
                        android:layout_width="230dp"
                        android:layout_height="56dp"
                        android:background="@drawable/bg_connect"
                        android:gravity="center"
                        android:onClick="@{() ->presenter.linkService()}"
                        android:text="@string/connect"
                        android:textColor="#FFFAF7"
                        android:textSize="18sp" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="336dp"
                    android:layout_height="152dp"
                    android:layout_margin="16dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <FrameLayout
                        android:id="@+id/uf_ad_frame"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_connect"
                        android:visibility="@{vpnAdUf ? View.VISIBLE : View.GONE}" />

                    <ImageView
                        android:id="@+id/img_uf_ad_frame"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_main_ad_pl"
                        android:visibility="@{vpnAdUf ? View.GONE : View.VISIBLE}" />
                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <include
            android:id="@+id/in_home_navigation"
            layout="@layout/layout_main_navigation_uf"
            android:visibility="@{sidebarShowsUf ? View.VISIBLE : View.GONE}"
            binding:presenter="@{presenter}" />

    </FrameLayout>
</layout>
